<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.yodo.mobile.ui.PaymentActivity">

    <item
        android:id="@+id/action_settings"
        android:title="@string/action.settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/action.about"
        android:orderInCategory="100"
        app:showAsAction="never" />

</menu>
