...
                android:textColor="@android:color/white"
                android:padding="5dp"
                android:drawablePadding="10dp"
                android:drawableLeft="@drawable/get_balance"
                android:background="@drawable/highlight_button"
                android:text="@string/get_balance"
                android:id="@+id/button1"
                android:singleLine="true"
                android:gravity="left|center_vertical"
                android:onClick="balanceClick" />

        <Button
                android:layout_width="match_parent"
...
