...
    <string name="no_wifi">You must turn on your wifi first</string>
    <string name="no_hdw">You must turn on your wifi or bluetooth first</string>
    <string name="start_biometric">Press the screen when you are ready</string>
    <string name="error">This is embarrassing! An error occurred in the process</string>
    <string name="no_internet">Internet access required</string>
    <string name="show_pass">Show PIP</string>
    <string name="input_pip">Personal Identification Phrase (PIP)</string>
    <string name="pip_length_short">PIP must be more than 3 digits</string>
    <string name="pip_confirm_diff">The PIP does not match</string>
    <string name="wrong_pip">Incorrect PIP</string>
    <string name="balance_succesfull">Balance obtained correctly</string>
    <string name="change_pip_succesfull">PIP successfully changed</string>
    <string name="not_available">This feature is not available yet</string>
...
