<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_payment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- The main content view -->
    <include layout="@layout/fragment_main_content" />

    <!-- The navigation drawer -->
    <include layout="@layout/fragment_main_navigation" />

</android.support.v4.widget.DrawerLayout>

