<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/YodoUI.WrapperStyle"
    tools:context=".ui.ResetPipActivity" >

    <LinearLayout
        android:id="@+id/llResetPipOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2" >

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acbResetPip"
            style="@style/ResetButton"
            android:onClick="resetPip"
            android:text="@string/text.pip.reset"
            app:backgroundTint="@color/colorPrimaryRed"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/acbForgotPip"
            style="@style/ResetButton"
            android:onClick="forgotPip"
            android:text="@string/text.forgot.pip"
            app:backgroundTint="@color/colorForgotPip"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llResetPipOptions"/>

</RelativeLayout>